--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,87 @@
 * {
   box-sizing: border-box;
+  font-family: Didot;
+  /* padding: 0;
+  margin: 0; */
 }
 
 header {
-  background-color: bisque;
+  background-color: rgb(108, 99, 99);
 }
 
-/* nav {
+nav {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 2rem;
+
+}
+
+#logo {
+  height: 60px;
 }
 
 nav ul {
   display: flex;
+  gap: 2rem;
+  list-style: none;
 }
 
-#logo img {
-  width: 300px;
-} */
+nav a {
+  position: relative;
+}
+
+
+.active::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: rgb(232, 232, 232);
+}
+
+nav ul li a {
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: bold;
+  color: white;
+}
+
+.hero {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  height: 450px;
+  overflow: hidden;
+}
+
+.heroVideo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 0;
+}
+
+.heroContent {
+  position: absolute;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  z-index: 1;
+  top: 30%;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.3);
+  z-index: 0.5;
+}
