--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,25 @@
 * {
   box-sizing: border-box;
-  font-family: Didot;
+  font-family: Didot, "Bodoni MT", "Didot LT STD", "Hoefler Text", Garamond, "Times New Roman", serif;
   padding: 0;
   margin: 0;
 }
 
 header {
   background-color: rgb(113, 102, 123);
+  min-width: 320px;
+  width: 100%;
+  position: fixed;
+  z-index: 2;
 }
+
 
 nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 1rem 2rem;
+
 
 }
 
@@ -80,7 +86,7 @@ nav ul li a {
   color: rgb(255, 255, 255);
   text-align: center;
   z-index: 1;
-  top: 30%;
+  top: 45%;
 }
 
 .hero h1 {
@@ -116,7 +122,7 @@ nav ul li a {
   color: white;
   height: 500px;
   width: 400px;
-  min-width: 400px;
+  min-width: 200px;
   border-radius: 15px;
   position: relative;
   transition: all 0.3s ease;
@@ -198,6 +204,7 @@ nav ul li a {
   height: 100%;
   background: linear-gradient(to top, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0));
   z-index: 0.5;
+  border-radius: 15px;
 }
 
 .parallax {
@@ -300,7 +307,7 @@ hr {
 
 .branchB {
   width: 100%;
-  max-width: 600px;
+  max-width: 500px;
   margin: 50px auto;
 }
 
@@ -315,16 +322,19 @@ hr {
 .detailC {
   margin: 20px auto;
   text-align: center;
-  width: 700px;
+  width: 1000px;
+  max-width: 1500px;
 }
 
 .detailC p {
+  font-weight: 900;
   margin: 15px 0;
 }
 
 .detailC ul li {
   position: relative;
   padding-left: 1em;
+  margin-bottom: 25px;
 }
 
 .detailC ul li::before {
@@ -332,4 +342,129 @@ hr {
   position: absolute;
   left: 0;
   color: #555;
+}
+
+@media screen and (max-width:1100px) {
+
+  .sectionTitle {
+    font-size: 26px;
+  }
+
+  .branchA {
+    display: block;
+  }
+
+  .branchB {
+    display: block;
+  }
+
+  .detailA {
+    margin: 15px auto;
+    text-align: center;
+  }
+
+  .detailC {
+    width: 400px;
+  }
+}
+
+@media screen and (max-width:800px) {
+
+  #weather {
+    font-size: 16px;
+  }
+
+  #description {
+    display: none;
+  }
+}
+
+@media screen and (max-width:600px) {
+
+  #icon {
+    display: none;
+  }
+
+  .detailA {
+    width: 300px;
+    height: 400px;
+  }
+
+  .detailB {
+    width: 300px;
+    height: 400px;
+  }
+
+  .review {
+    display: block;
+    width: 200px;
+    margin: 0 auto;
+  }
+
+  .reviewWords {
+    width: 200px;
+    padding-top: 50px;
+  }
+
+  .name {
+    padding-top: 20px;
+    text-align: center;
+  }
+
+  footer ul {
+    display: block;
+  }
+
+  .detailC {
+    width: 200px;
+  }
+}
+
+@media screen and (max-width:500px) {
+
+
+  .detailA {
+    width: 300px;
+    height: 400px;
+    min-width: 100px;
+  }
+
+  .detailB {
+    width: 200px;
+    height: 300px;
+    min-width: 100px;
+  }
+
+  .descriptionB p {
+    display: none;
+  }
+
+  #weather {
+    font-size: 16px;
+  }
+
+  #logo {
+    width: 100px;
+  }
+}
+
+@media screen and (max-width:400px) {
+
+
+  .detailA {
+    width: 200px;
+    height: 300px;
+
+  }
+
+  .detailB {
+    width: 150px;
+    height: 150px;
+
+  }
+
+  #weather {
+    font-size: 14px;
+  }
+
 }
