--- a/styles.css
+++ b/styles.css
@@ -13,14 +13,11 @@ header {
   z-index: 2;
 }
 
-
 nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 1rem 2rem;
-
-
 }
 
 #logo {
@@ -40,7 +37,6 @@ nav ul {
 nav a {
   position: relative;
 }
-
 
 .active::after {
   content: '';
@@ -99,7 +95,7 @@ nav ul li a {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(0, 0, 0, 0.25);
   z-index: 0.5;
 }
 
@@ -196,7 +192,7 @@ nav ul li a {
   background-image: url(/images/familyRoom.jpeg);
 }
 
-.gradient-overlay {
+.gradientOverlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -467,4 +463,27 @@ hr {
     font-size: 14px;
   }
 
+  .heroContent h1 {
+    font-size: 22px;
+  }
+
+  .heroContent h2 {
+    font-size: 20px;
+  }
+
+  .heroContent p {
+    font-size: 18px;
+  }
+
+}
+
+.my-title {
+  opacity: 0;
+  transform: translateY(50px);
+}
+
+h2.my-title {
+  font-size: 2.5rem;
+  opacity: 0;
+  transform: translateY(50px);
 }
