--- a/styles.css
+++ b/styles.css
@@ -206,7 +206,7 @@ nav ul li a {
 .parallax {
   margin-top: 100px;
   margin-bottom: 50px;
-  background-image: url('/images/couple.jpeg');
+  background-image: url('images/couple.jpeg');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
